# soul-writer

./: .gitignore  launch.bat  launch.vbs  package-lock.json  package.json
config/: tsconfig.main.json  tsconfig.renderer.json  vite.config.ts
doc/: Agent知识库检索与学习功能规划.md  开发规划.md
server/: main.py  requirements.txt  store.py
server/ai/: agent.py  llm_client.py  novel_browser.py  tools.py
server/api/: books.py  documents.py  groups.py
server/knowledge_base/: README.md
server/models/: __init__.py
server/resources/novel-writing/: SKILL.md
server/resources/novel-writing/reference/: 全文检索构建方案.md  剧情结构库.md  文风参考.md  爽点类型库.md
server/storage/: file_store.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  python_bridge.rs
src/main/: index.ts  ipc-handlers.ts  preload.ts  python-bridge.ts
src/renderer/: App.tsx  index.html  main.tsx  theme-schemes.ts  types.d.ts
src/renderer/components/: AppTitleBar.tsx  Dialog.tsx  ResizeHandle.tsx
src/renderer/components/ai/: ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  ModelSwitcher.tsx
src/renderer/components/bookshelf/: BookCard.tsx  BookShelf.tsx
src/renderer/components/editor/: DocumentTree.tsx  EditorLayout.tsx  EditorPanel.tsx  EditorToolbar.tsx  Sidebar.tsx
src/renderer/components/settings/: SettingsPanel.tsx
src/renderer/extensions/: FontSize.ts  LineHeight.ts
src/renderer/stores/: ai-store.ts  book-store.ts  document-store.ts  editor-prefs.ts  model-config-store.ts  theme-store.ts
src/renderer/styles/: global.css
